@@ -1,3 +1,6 @@
+2007-03-16 Ian Rutt
+ * Fixed problem specifying sigma levels - all three methods work now
+
 2007-02-23 Ian Rutt
  * configure.in: bump version to 1.0.1
  * NEWS: update
